replaced the text with images  of cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,28 @@
 <!-- app.component.html -->
 <div class="input-container">
   <div>
-      <label for="numPlayers">Number of Players:</label>
-      <input type="number" id="numPlayers" min="1" value="1" #numPlayersInput>
+    <label for="numPlayers">Number of Players:</label>
+    <input type="number" id="numPlayers" min="1" value="1" #numPlayersInput>
   </div>
   <div>
-      <label for="cardsPerPlayer">Cards per Player:</label>
-      <input type="number" id="cardsPerPlayer" min="1" value="5" #cardsPerPlayerInput>
+    <label for="cardsPerPlayer">Cards per Player:</label>
+    <input type="number" id="cardsPerPlayer" min="1" value="5" #cardsPerPlayerInput>
   </div>
+  <div class="error-message">{{ errorMessage }}</div>
   <button id="shuffleButton" (click)="shuffleCards()">Shuffle Cards</button>
+  <!-- Display error message -->
+
 </div>
 
 <!-- Display dealt hands -->
 <div class="dealt-cards-container">
-  <div *ngFor="let hand of hands; let i = index" class="dealt-hand">
+  <div *ngFor="let hand of hands; let i = index">
     <div class="player-info">Player {{ i + 1 }}</div>
+  <div class="dealt-hand">
     <div *ngFor="let card of hand" class="dealt-card">
-      {{ card.Value }} of {{ card.Suit }}
+      <img [src]="card.imagePath" alt="{{ card.value }} of {{ card.suit }}">
     </div>
   </div>
 </div>
-
+</div>
 
