--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -88,6 +88,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
     width: 100px;
+    height: 170px;
 }
 
 /* Adjust the size of the card images */
